# athena_automation

./: .gitlab-ci.yml  Makefile  README.md
athena_automation/: CMakeLists.txt  package.xml
athena_interactive/: CMakeLists.txt  Readme.md  package.xml
athena_interactive/include/interactive/: interactive.hpp  speaker_client.hpp
athena_interactive/src/: client_test.cpp  interactive.cpp  speaker_client.cpp
athena_mapping/open_vins/: README.md
athena_mapping/open_vins/ov_core/: CMakeLists.txt  package.xml
athena_mapping/open_vins/ov_core/include/ov_core/cpi/: CpiBase.h  CpiV1.h  CpiV2.h
athena_mapping/open_vins/ov_core/include/ov_core/feat/: FeatureDatabase.h  FeatureInitializer.h
athena_mapping/open_vins/ov_core/include/ov_core/init/: InertialInitializer.h
athena_mapping/open_vins/ov_core/include/ov_core/sim/: BsplineSE3.h
athena_mapping/open_vins/ov_core/include/ov_core/track/: TrackAruco.h  TrackBase.h  TrackDescriptor.h  TrackKLT.h  TrackSIM.h
athena_mapping/open_vins/ov_core/include/ov_core/types/: IMU.h  JPLQuat.h  Landmark.h  PoseJPL.h  Vec.h
athena_mapping/open_vins/ov_core/include/ov_core/utils/: dataset_reader.h  sensor_data.h
athena_mapping/open_vins/ov_core/src/: test_tracking.cpp  test_webcam.cpp
athena_mapping/open_vins/ov_core/src/feat/: Feature.cpp  FeatureInitializer.cpp
athena_mapping/open_vins/ov_core/src/init/: InertialInitializer.cpp
athena_mapping/open_vins/ov_core/src/sim/: BsplineSE3.cpp
athena_mapping/open_vins/ov_core/src/track/: TrackAruco.cpp  TrackBase.cpp  TrackDescriptor.cpp  TrackKLT.cpp  TrackSIM.cpp
athena_mapping/open_vins/ov_core/src/types/: Landmark.cpp
athena_mapping/open_vins/ov_msckf/: CMakeLists.txt  package.xml
athena_mapping/open_vins/ov_msckf/launch/: ros2.launch.py  ros2.mono.launch.py
athena_mapping/open_vins/ov_msckf/src/: ros_subscribe_msckf.cpp  test_sim_repeat.cpp
athena_mapping/open_vins/ov_msckf/src/core/: RosVisualizer.cpp  RosVisualizer.h  VioManager.cpp  VioManager.h  VioManagerOptions.h
athena_mapping/open_vins/ov_msckf/src/sim/: Simulator.h
athena_mapping/open_vins/ov_msckf/src/state/: Propagator.cpp  Propagator.h  State.h  StateHelper.cpp  StateHelper.h  StateOptions.h
athena_mapping/open_vins/ov_msckf/src/update/: UpdaterHelper.h  UpdaterMSCKF.cpp  UpdaterMSCKF.h  UpdaterSLAM.cpp  UpdaterSLAM.h  UpdaterZeroVelocity.h
athena_mapping/open_vins/ov_msckf/src/utils/: parse_ros.h
athena_mapping/realsense-ros/realsense2_camera/: CMakeLists.txt  package.xml
athena_mapping/realsense-ros/realsense2_camera/include/: base_realsense_node.h
athena_mapping/realsense-ros/realsense2_camera/launch/: HighResHighAccuracyPreset-AE1000.json  high_performance.py  on_dog.py  rs_launch.py
athena_mapping/realsense-ros/realsense2_camera/src/: base_realsense_node.cpp  base_realsense_node.cpp.offon  realsense_node_factory.cpp
athena_mapping/rtabmap_ros/: CMakeLists.txt  README.md  package.xml
athena_mapping/rtabmap_ros/include/rtabmap_ros/: CommonDataSubscriber.h  CoreWrapper.h  MapsManager.h  point_cloud_xyz.hpp  point_cloud_xyzrgb.hpp  pointcloud_to_depthimage.hpp  rgbd_odometry.hpp  rgbd_sync.hpp  stereo_odometry.hpp  stereo_sync.hpp
athena_mapping/rtabmap_ros/launch/ros2/: rs_d455.launch.py
athena_mapping/rtabmap_ros/src/: CameraNode.cpp  CommonDataSubscriber.cpp  CoreNode.cpp  CoreWrapper.cpp  DbPlayerNode.cpp  MapsManager.cpp  PointCloudXYZRGBNode.cpp  StereoCameraNode.cpp
athena_mapping/rtabmap_ros/src/nodelets/: data_odom_sync.cpp  data_throttle.cpp  disparity_to_depth.cpp  point_cloud_xyzrgb.cpp  rgbdicp_odometry.cpp  stereo_throttle.cpp  undistort_depth.cpp
athena_navigation/dm_planner/: CMakeLists.txt  README.md  global_planner_plugin.xml  package.xml
athena_navigation/dm_planner/include/dm_planner/: cost_value.h  data_type.h  distance_map_planner.h  distance_map_planner_node.h  graph_search.h  map_util.h
athena_navigation/dm_planner/src/: distance_map_planner.cpp  distance_map_planner_node.cpp  graph_search.cpp
athena_navigation/limited_navfn_planner/: CMakeLists.txt  README.md  global_planner_plugin.xml  package.xml
athena_navigation/limited_navfn_planner/include/limited_navfn_planner/: limited_navfn.hpp  limited_navfn_planner.hpp
athena_navigation/limited_navfn_planner/src/: limited_navfn.cpp  limited_navfn_planner.cpp
athena_navigation/navigation2/nav2_behavior_tree/include/nav2_behavior_tree/plugins/action/: compute_path_to_pose_action.hpp
athena_navigation/navigation2/nav2_behavior_tree/plugins/action/: compute_path_to_pose_action.cpp
athena_navigation/navigation2/nav2_behavior_tree/plugins/condition/: goal_updated_condition.cpp  select_mode_condition.cpp
athena_navigation/navigation2/nav2_bt_navigator/: CHANGELOG.rst
athena_navigation/navigation2/nav2_bt_navigator/behavior_trees/: navigation.xml
athena_navigation/navigation2/nav2_bt_navigator/src/: bt_navigator.cpp
athena_navigation/navigation2/nav2_costmap_2d/: CHANGELOG.rst
athena_navigation/navigation2/nav2_costmap_2d/plugins/: static_layer.cpp
athena_navigation/navigation2/nav2_costmap_2d/src/: clear_costmap_service.cpp
athena_navigation/navigation2/nav2_navfn_planner/src/: navfn.cpp  navfn_planner.cpp
athena_navigation/navigation2/nav2_util/include/nav2_util/: odometry_utils.hpp
athena_navigation/navigation2/nav2_util/src/: odometry_utils.cpp
athena_navigation/navigation2/navigation2/: package.xml
athena_navigation/teb_local_planner/teb_local_planner/: CHANGELOG.rst  CMakeLists.txt  package.xml
athena_navigation/teb_local_planner/teb_local_planner/include/teb_local_planner/: teb_config.h  teb_local_planner_ros.h
athena_navigation/teb_local_planner/teb_local_planner/launch/: teb_nav2_bringup_launch.py  teb_params.yaml
athena_navigation/teb_local_planner/teb_local_planner/src/: teb_local_planner_ros.cpp
athena_tracking/: CMakeLists.txt  package.xml
athena_tracking/include/object_tracking/: common_type.hpp  distance_filter.hpp  object_tracking.hpp  transform.hpp
athena_tracking/src/: distance_filter.cpp  main.cpp  object_tracking.cpp  transform.cpp
(+2 files in other folders)
