<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>athena_automation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sunbohan@xiaomi.com">mi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>interactive</depend>
  <depend>rtabmap_ros</depend>
  <depend>ov_msckf</depend>
  <depend>realsense2_camera</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>limited_navfn_planner</depend>
  <depend>teb_local_planner</depend>
  <depend>move_base2</depend>
  <depend>athena_tracking</depend>

  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
