<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ov_msckf</name>
  <version>1.0.0</version>
  <description>
      Implementation of the MSCKF.
  </description>
  <author email="pgeneva@udel.edu">Patrick Geneva</author>
  <author email="keck@udel.edu">Kevin Eckenhoff</author>
  <maintainer email="pgeneva@udel.edu">Patrick Geneva</maintainer>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>athena_utils</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>visualization_msgs</depend>
  <depend>ov_core</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
